# Lowlife_New

./: CHANGELOG.md  LICENSE  README.md  assets.rar  bot.py  combat_loadout.py  debug.py  duel_core.py  duel_legacy.py  embeds.py  inventory.py  inventory_cmds.py  mypy.ini  players.py  pyproject.toml  requirements.txt  ruff.toml  rules.py  updates.py
docs/: master_structure_log.md
scripts/: dev.ps1  dev.sh  sync_commands.py
tests/: test_boot.py  test_duel_flow.py
